--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
       - run: go vet ./...
 
       - uses: golangci/golangci-lint-action@v6
+        with:
+          version: v2
 
   test:
     runs-on: ubuntu-latest
